--- a/top.html
+++ b/top.html
@@ -62,13 +62,15 @@
                         <div class="new-event">
                             <p>News / Event </p>
                             <div class="button-event">
-                                <button class="button2">お知らせ一覧へ<ion-icon style="padding-left: 30px ;"
-                                        name="arrow-forward-outline">
+                                <a href="#">
+                                    <button class="button2">お知らせ一覧へ<ion-icon style="padding-left: 30px ;"name="arrow-forward-outline">
                                     </ion-icon></button>
+                                </a>
                             </div>
                         </div>
                         <div class="notify">
-                            お知らせ / イベント情報
+                            <a href="#">お知らせ</a>
+                            <span>/ <a href="#">イベント情報</a> </span>
                         </div>
                         <div class="post_list">
                             <div class="post_list-item">
@@ -77,8 +79,12 @@
                                     <div class="new">New</div>
                                 </div>
                                 <div class="news-title">
-                                    <a href="#">日本アバイア株式会社、株式会社アドバンスト・メディア共催 コンタクトセンターWebinar</a>
-                                    <ion-icon class="arrow" name="arrow-forward-outline"></ion-icon>
+                                    <div class="news-title-a">
+                                        <a href="#">日本アバイア株式会社、株式会社アドバンスト・メディア共催 コンタクトセンターWebinar</a>
+                                    </div>
+                                    <div class="news-title-b">
+                                        <ion-icon class="arrow" name="arrow-forward-outline"></ion-icon>
+                                    </div>
                                 </div>
                                 <div class="n"></div>
                             </div>
@@ -87,8 +93,12 @@
                                     <span class="date">2021/09/30 </span>
                                 </div>
                                 <div class="news-title">
-                                    <a href="#">altcircleのコンタクトセンターサービス「PrimeTiaas SharePack」に音声認識を標準搭載。</a>
-                                    <ion-icon class="arrow" name="arrow-forward-outline"></ion-icon>
+                                    <div class="news-title-a">
+                                        <a href="#">altcircleのコンタクトセンターサービス「PrimeTiaas SharePack」に音声認識を標準搭載。</a>
+                                    </div>
+                                    <div class="news-title-b">
+                                        <ion-icon class="arrow" name="arrow-forward-outline"></ion-icon>
+                                    </div>
                                 </div>
                                 <div class="n" style="margin-top: 28px;"></div>
                             </div>
@@ -99,8 +109,12 @@
                                     <span class="date">2021/09/28 </span>
                                 </div>
                                 <div class="news-title">
-                                    <a href="#">altcircleを機能強化する新AIチャットボット 「PrimeAgent」を提供開始！</a>
-                                    <ion-icon class="arrow" name="arrow-forward-outline"></ion-icon>
+                                    <div class="news-title-a">
+                                        <a href="#">altcircleを機能強化する新AIチャットボット 「PrimeAgent」を提供開始！</a>
+                                    </div>
+                                    <div class="news-title-b">
+                                        <ion-icon class="arrow" name="arrow-forward-outline"></ion-icon>
+                                    </div>
                                 </div>
                                 <div class="n"></div>
                             </div>
@@ -109,8 +123,12 @@
                                     <span class="date">2021/07/28 </span>
                                 </div>
                                 <div class="news-title">
-                                    <a href="#">自社ECサイトの成功に向けた４つの戦略 ～ECビジネスを成功させるために必要なソリューションの実例～</a>
-                                    <ion-icon class="arrow" name="arrow-forward-outline"></ion-icon>
+                                    <div class="news-title-a">
+                                        <a href="#">自社ECサイトの成功に向けた４つの戦略 ～ECビジネスを成功させるために必要なソリューションの実例～</a>
+                                    </div>
+                                    <div class="news-title-b">
+                                        <ion-icon class="arrow" name="arrow-forward-outline"></ion-icon>
+                                    </div>
                                 </div>
                                 <div class="n"></div>
                             </div>
@@ -120,9 +138,11 @@
                         <div class="column">
                             <p>Column </p>
                             <div class="button-column">
-                                <button class="button2">コラム一覧へ<ion-icon style="padding-left: 30px ;"
+                                <a href="#">
+                                    <button class="button2">コラム一覧へ<ion-icon style="padding-left: 30px ;"
                                         name="arrow-forward-outline">
                                     </ion-icon></button>
+                                </a>
                             </div>
                         </div>
                         <div class="column-tile">
@@ -138,8 +158,8 @@
                                     <div class="new">New</div>
                                 </div>
                                 <div class="column_list-span">
-                                    <p style="font-size: 20px; font-family: NotoSansJP-Medium">
-                                        ２行以上の場合は、表示されません。最大００文字まで表示されますそれ以降は省略さ…</p>
+                                    <a href="#"><p style="font-size: 20px; font-family: NotoSansJP-Medium">
+                                        ２行以上の場合は、表示されません。最大００文字まで表示されますそれ以降は省略さ…</p></a>
                                     <p style="font-size: 16px; font-family: NotoSansJP-Regular">
                                         コラム詳細のリード文が表示されます。３行以内で納まる文字数は全角で００文字コラム詳細のリード文が表示されます。３行以内で納まる文字数は全角で００文字０００…
                                     </p>
@@ -156,7 +176,7 @@
                                                 <span class="date">2021/10/13 </span>
                                                 <div class="new">New</div>
                                             </div>
-                                            <div class="news-title">
+                                            <div class="news-column-tile">
                                                 <div class="news-item">
                                                     <a href="#">未経験からCSへ挑戦！</a>
                                                 </div>
@@ -177,9 +197,9 @@
                                                 <span class="date">2021/10/13 </span>
                                                 <div class="new">New</div>
                                             </div>
-                                            <div class="news-title">
+                                            <div class="news-column-tile">
                                                 <div class="news-item">
-                                                    <a href="#">未経験からCSへ挑戦！</a>
+                                                    <a href="#">SaaS企業の「最初の100人」をどう選ぶ？ヤプリ代表SaaS企業の「最初の1…</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -198,7 +218,7 @@
                                                 <span class="date">2021/10/13 </span>
                                                 <div class="new">New</div>
                                             </div>
-                                            <div class="news-title">
+                                            <div class="news-column-tile">
                                                 <div class="news-item">
                                                     <a href="#">未経験からCSへ挑戦！</a>
                                                 </div>
@@ -343,10 +363,22 @@
                                     <a href="" class="next">&#8250;</a>
                                 </div>
                             </div>
+                            <div class="btn-tab">
+                                <a href="#">
+                                    <button class="button5">サービス詳細<ion-icon style="padding-left: 30px ;"name="arrow-forward-outline">
+                                    </ion-icon></button>
+                                </a>
+                                <a href="#">
+                                    <button class="button4"><ion-icon style="padding-right: 10px; font-size: 20px;" name="mail-outline"></ion-icon>お問い合わせ
+                                    </ion-icon></button>
+                                </a>
+                            </div>
                         </div>
                         <!-- End Tab -->
                         <!-- Service -->
-                        <div class="service"></div>
+                        <div class="service">
+                            
+                        </div>
                         <!-- End Service -->
                         <!-- Download -->
                         <div class="download">
