--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
                     <div class="breadcrumbs">
                         <div class="top-new">
                             <div class="top-new-tab">
-                                TOP / コラム / BtoB SaaSに携わる人なら意識してお…
+                                <a href="">TOP</a>
+                                <span>/ <a href="#">コラム</a></span>
+                                <span>/ <a href="#">BtoB SaaSに携わる人なら意識してお…</a></span>
                             </div>
                             <div class="l"></div>
                             <div class="top-new-date">
@@ -239,12 +241,12 @@
                             <table class="table-item-3">
                                 <tbody>
                                     <tr>
-                                        <td style="width: 40%; background-color: #ECF3FA">
+                                        <td style="width: calc(40 / 140 * 100%);background-color: #ECF3FA">
                                             width40%に設定することで見た目を整えることができます。左右パディング25pxあくように改行していきます。</td>
-                                        <td style="width: 20%">width20%に設定。上下中央クラス設定</td>
-                                        <td style="width: 40%">
+                                        <td style="width: calc(20 / 140 * 100%)">width20%に設定。上下中央クラス設定</td>
+                                        <td style="width: calc(40 / 140 * 100%)">
                                             width40%に設定することで見た目を整えることができます。左右パディング25pxあくように改行していきます。</td>
-                                        <td style="width: 40%">
+                                        <td style="width: calc(40 / 140 * 100%)">
                                             width40%に設定することで見た目を整えることができます。左右パディング25pxあくように改行していきます。</td>
                                     </tr>
                                 </tbody>
@@ -407,7 +409,7 @@
                                     <img src="img/related-post.png" alt="">
                                 </div>
                                 <div class="post_content">
-                                    米国SaaS上場企業58社から徹底分析！「成功する創業チーム」の6タイプ＆3つの要点が見えてきた
+                                    <a href="#">米国SaaS上場企業58社から徹底分析！「成功する創業チーム」の6タイプ＆3つの要点が見えてきた</a>
                                 </div>
                             </div>
                             <div class="related_post_item">
@@ -415,7 +417,7 @@
                                     <img src="img/related-post.png" alt="">
                                 </div>
                                 <div class="post_content">
-                                    未経験からCSへ挑戦！“SaaSの最重要課題”に取り組める環境はキャリアの可能性を広げる：ログラス・矢納弘貴の仕事。最大文字数６９文字で…
+                                    <a href="#">未経験からCSへ挑戦！“SaaSの最重要課題”に取り組める環境はキャリアの可能性を広げる：ログラス・矢納弘貴の仕事。最大文字数６９文字で…</a>
                                 </div>
                             </div>
                             <!-- End Related posts -->
